--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,6 +6,7 @@
     <title>Payment</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/demo.css">
@@ -66,7 +67,12 @@
                     <img src="https://demo.tutorialzine.com/2016/11/simple-credit-card-validation-form/assets/images/amex.jpg" id="amex">
                 </div>
                 <div class="form-group" id="pay-now">
-                    <button type="submit" class="btn btn-default" id="confirm-purchase">Confirm</button>
+                    <button type="submit" class="btn btn-default" id="confirm-purchase">
+                        <span>Confirm</span>
+                    </button>
+                    <button type="submit" class="btn btn-default" id="loadingButton">
+                        <span><i class="fa fa-circle-o-notch fa-spin"></i><span>
+                    </button>
                 </div>
             </form>
         </div>
