--- a/src/views/users/profile.html
+++ b/src/views/users/profile.html
@@ -53,7 +53,7 @@
               <span class="nav-link-text ms-1">Dashboard</span>
             </a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="/merchants/transactions">
             <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
               <svg width="12px" height="12px" viewBox="0 0 42 42" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -72,7 +72,7 @@
             </div>
             <span class="nav-link-text ms-1">Transactions</span>
           </a>
-        </li>
+        </li> -->
         <li class="nav-item">
             <a class="nav-link" href="/merchants/customers">
               <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
