--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,175 +1,133 @@
-<!doctype html>
-<html lang="en" class="h-100">
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.108.0">
-    <title>Twinty | Home</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-
-    <!-- Favicons -->
-    <link rel="apple-touch-icon" href="/docs/5.3/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="manifest" href="/docs/5.3/assets/img/favicons/manifest.json">
-    <link rel="mask-icon" href="/docs/5.3/assets/img/favicons/safari-pinned-tab.svg" color="#712cf9">
-    <link rel="icon" href="/docs/5.3/assets/img/favicons/favicon.ico">
-    <meta name="theme-color" content="#712cf9">
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-
-        .b-example-divider {
-            height: 3rem;
-            background-color: rgba(0, 0, 0, .1);
-            border: solid rgba(0, 0, 0, .15);
-            border-width: 1px 0;
-            box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-        }
-
-        .b-example-vr {
-            flex-shrink: 0;
-            width: 1.5rem;
-            height: 100vh;
-        }
-
-        .bi {
-            vertical-align: -.125em;
-            fill: currentColor;
-        }
-
-        .nav-scroller {
-            position: relative;
-            z-index: 2;
-            height: 2.75rem;
-            overflow-y: hidden;
-        }
-
-        .nav-scroller .nav {
-            display: flex;
-            flex-wrap: nowrap;
-            padding-bottom: 1rem;
-            margin-top: -1px;
-            overflow-x: auto;
-            text-align: center;
-            white-space: nowrap;
-            -webkit-overflow-scrolling: touch;
-        }
-
-        .section {
-            min-height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            width: 100%;
-        }
-
-        .bg-image1 {
-            background-image: url('https://images.pexels.com/photos/50987/money-card-business-credit-card-50987.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-            background-size: cover;
-            background-position: center;
-            opacity: 0.7;
-        }
-
-        .bg-image2 {
-            background-color: #100c08;
-            background-size: cover;
-            background-position: center;
-            opacity: 0.5;
-        }
-
-        .bg-image3 {
-            background-color: #100c08;
-            background-size: cover;
-            background-position: center;
-            opacity: 0.5;
-        }
-
-        .w-text {
-            width: 80%;
-        }
-    </style>
-
-
-    <!-- Custom styles for this template -->
-    <link href="/assets/extras/css/cover.css" rel="stylesheet">
+	<title>ISCE Digital Concepts</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--===============================================================================================-->	
+	<link rel="icon" type="image/png" href="/assets/extras/comingsoon/images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/assets/extras/comingsoon/vendor/bootstrap//assets/extras/comingsoon/css/bootstrap.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0//assets/extras/comingsoon/css/font-awesome.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/assets/extras/comingsoon/vendor/animate/animate.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/assets/extras/comingsoon/vendor/select2/select2.min.css">
+<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="/assets/extras/comingsoon/css/util.css">
+	<link rel="stylesheet" type="text/css" href="/assets/extras/comingsoon/css/main.css">
+<!--===============================================================================================-->
 </head>
+<body>
+	
+	
+	<div class="size1 bg0 where1-parent">
+		<!-- Coutdown -->
+		<div class="flex-c-m bg-img1 size2 where1 overlay1 where2 respon2" style="background-image: url('/assets/extras/comingsoon/images/bg02.jpg');">
+			<!-- <div class="wsize2 flex-w flex-c-m cd100 js-tilt">
+				<div class="flex-col-c-m size6 bor2 m-l-10 m-r-10 m-t-15">
+					<span class="l2-txt1 p-b-9 days">35</span>
+					<span class="s2-txt4">Days</span>
+				</div>
+				<div class="flex-col-c-m size6 bor2 m-l-10 m-r-10 m-t-15">
+					<span class="l2-txt1 p-b-9 hours">17</span>
+					<span class="s2-txt4">Hours</span>
+				</div>
+				<div class="flex-col-c-m size6 bor2 m-l-10 m-r-10 m-t-15">
+					<span class="l2-txt1 p-b-9 minutes">50</span>
+					<span class="s2-txt4">Minutes</span>
+				</div>
+				<div class="flex-col-c-m size6 bor2 m-l-10 m-r-10 m-t-15">
+					<span class="l2-txt1 p-b-9 seconds">39</span>
+					<span class="s2-txt4">Seconds</span>
+				</div>
+			</div> -->
+		</div>
+		
+		<!-- Form -->
+		<div class="size3 flex-col-sb flex-w p-l-75 p-r-75 p-t-45 p-b-45 respon1">
+			<div class="wrap-pic1">
+				<!-- <img src="https://firebasestorage.googleapis.com/v0/b/iscecard.appspot.com/o/Asset%2012.png?alt=media&token=4e6d4e9e-d080-4164-8730-558d1997de61" alt="LOGO"> -->
+			</div>
 
-<body class="d-flex h-100 text-center text-bg-dark">
+			<div class="p-t-50 p-b-60">
+                <h1 class="p-b-12">Twinty</h1>
+				<p class="m1-txt1 p-b-36">
+					This website is <span class="m1-txt2">Under Construction</span>
+				</p>
 
-    <div class="d-flex w-100 h-100 py-3 mx-auto flex-column">
-        <header class="mb-3 p-2 mx-3">
-            <div>
-                <h3 class="float-md-start mb-0">TWINTY</h3>
-                <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#home">Home</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="#about">About</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="#contact">Contact</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="/merchants/login">Merchants</a>
-                </nav>
-            </div>
-        </header>
+				<!-- <form class="contact100-form validate-form">
+					<div class="wrap-input100 m-b-10 validate-input" data-validate = "Name is required">
+						<input class="s2-txt1 placeholder0 input100" type="text" name="name" placeholder="Your Name">
+						<span class="focus-input100"></span>
+					</div>
+					<div class="wrap-input100 m-b-20 validate-input" data-validate = "Email is required: ex@abc.xyz">
+						<input class="s2-txt1 placeholder0 input100" type="text" name="email" placeholder="Email Address">
+						<span class="focus-input100"></span>
+					</div>
 
-        <section id="home" class="px-3 section bg-image1">
-            <div class="w-text">
-                <h1>Empower Your Business with Our Cutting-Edge Payment Solutions</h1>
-                <p class="lead px-2">Twinty is a payment solutions company that simplifies and speeds up payment
-                    integrations for
-                    merchants. With our two cutting-edge solutions - the <a href="/docs/invincible">Invincible Checkout System</a> and the
-                    <a href="/docs/checkout">Redirect
-                        Checkout System</a> - we strive to provide seamless and secure payment experiences. Join the
-                    thousands of
-                    satisfied merchants who trust Twinty for all their payment needs.
-                </p>
-                <p class="lead">
-                    <a href="#about" class="btn btn-lg btn-light fw-bold border-white bg-white">Learn more</a>
-                </p>
-            </div>
-        </section>
+					<div class="w-full">
+						<a href="https://info!isce.app" class="flex-c-m s2-txt2 size4 bg1 bor1 hov1 trans-04 text-white">
+							Preorder@ISCE.APP
+						</a>
+					</div>
+				</form> -->
 
-        <section id="about" class="px-3 section bg-image2">
-            <div class="w-text">
-                <h1>About Twinty</h1>
-                <p class="lead px-2">Twinty is a digital solutions provider, building connections into Emerging markets and
-                    unparalleled ecosystems for growth. We have set up a card acquiring solution to enable payment platforms
-                    to expand into emerging markets.</p>
-                <p class="lead">
-                    <a href="#contact" class="btn btn-lg btn-light fw-bold border-white bg-white">Let's Connect</a>
-                </p>
-            </div>
-        </section>
+			</div>
 
-        <section id="contact" class="px-3 section">
-            <div class="w-text">
-                <h1>Let's Connect</h1>
-                <p class="lead"><i class="fa fa-phone"></i> +234 808 605 6000</p>
-                <p class="lead"><i class="fa fa-envelope"></i> info@twinty.io</p>
-            </div>
-        </section>
-    </div>
+			<div class="flex-w">
+				<a href="mailto:info@twinty.io" class="flex-c-m size5 bg1 how1 trans-04 m-r-5">
+					<i class="fa fa-envelope"></i>
+				</a>
+
+				<a href="tel:+2348086056000" class="flex-c-m size5 bg1 how1 trans-04 m-r-5">
+					<i class="fa fa-phone"></i>
+				</a>
+			</div>
+		</div>
+	</div>
+
+
+
+	
+
+<!--===============================================================================================-->	
+	<script src="/assets/extras/comingsoon/vendor/jquery/jquery-3.2.1.min.js"></script>
+<!--===============================================================================================-->
+	<script src="/assets/extras/comingsoon/js/popper.js"></script>
+	<script src="/assets/extras/comingsoon/js/bootstrap.min.js"></script>
+<!--===============================================================================================-->
+	<script src="/assets/extras/comingsoon/vendor/select2/select2.min.js"></script>
+<!--===============================================================================================-->
+	<!-- <script src="/assets/extras/comingsoon/vendor/countdowntime/moment.min.js"></script>
+	<script src="/assets/extras/comingsoon/vendor/countdowntime/moment-timezone.min.js"></script>
+	<script src="/assets/extras/comingsoon/vendor/countdowntime/moment-timezone-with-data.min.js"></script>
+	<script src="/assets/extras/comingsoon/vendor/countdowntime/countdowntime.js"></script>
+	<script>
+		$('.cd100').countdown100({
+			/*Set Endtime here*/
+			/*Endtime must be > current time*/
+			endtimeYear: 0,
+			endtimeMonth: 0,
+			endtimeDate: 35,
+			endtimeHours: 18,
+			endtimeMinutes: 0,
+			endtimeSeconds: 0,
+			timeZone: "" 
+			// ex:  timeZone: "America/New_York"
+			//go to " http://momentjs.com/timezone/ " to get timezone
+		});
+	</script> -->
+<!--===============================================================================================-->
+	<!-- <script src="/assets/extras/comingsoon/vendor/tilt/tilt.jquery.min.js"></script>
+	<script >
+		$('.js-tilt').tilt({
+			scale: 1.1
+		})
+	</script> -->
+<!--===============================================================================================-->
+	<script src="/assets/extras/comingsoon/js/main.js"></script>
 
 </body>
-
 </html>
