--- a/src/views/home.html
+++ b/src/views/home.html
@@ -9,7 +9,7 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/assets/extras/comingsoon/vendor/bootstrap//assets/extras/comingsoon/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0//assets/extras/comingsoon/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/assets/extras/comingsoon/vendor/animate/animate.css">
 <!--===============================================================================================-->
@@ -82,7 +82,7 @@
 				</a>
 
 				<a href="tel:+2348086056000" class="flex-c-m size5 bg1 how1 trans-04 m-r-5">
-					<i class="fa fa-phone"></i>
+					<i class="fas fa-phone"></i>
 				</a>
 			</div>
 		</div>
